// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlobalScreen tests View Shows 'Se ha producido un error...' when the fetch failed 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#bee6ef",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "flex-start",
      "paddingTop": 17.5,
    }
  }
>
  <Text>
     Se ha producido un error 
  </Text>
</View>
`;

exports[`GlobalScreen tests View Shows Loading animation when the turns are not loaded 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#bee6ef",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "flex-start",
      "paddingTop": 17.5,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
        undefined,
      ]
    }
  >
    <View
      animating={true}
      animationDuration={1200}
      animationEasing={[Function]}
      color="#067bdb"
      interaction={true}
      renderComponent={[Function]}
      style={
        Object {
          "height": 262.5,
          "width": 262.5,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#067bdb",
              "borderRadius": 131.25,
              "height": 262.5,
              "opacity": 0.5,
              "transform": Array [
                Object {
                  "scale": 0.4,
                },
              ],
              "width": 262.5,
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#067bdb",
              "borderRadius": 131.25,
              "height": 262.5,
              "opacity": 1,
              "transform": Array [
                Object {
                  "scale": 0.4,
                },
              ],
              "width": 262.5,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`GlobalScreen tests View Shows everything when the turns are loaded 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#bee6ef",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "flex-start",
      "paddingTop": 17.5,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#332554",
        "fontFamily": "montserrat-extra-bold",
        "fontSize": 38.95833442608516,
        "marginTop": 52.5,
        "textAlign": "left",
        "width": 712.5,
      }
    }
  >
    Turno de Febrero
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "center",
        "marginTop": 17.5,
        "width": 712.5,
      }
    }
  >
    <View
      style={
        Object {
          "marginRight": 35,
          "marginTop": 78.75,
        }
      }
    />
    <View
      onLayout={[Function]}
      style={
        Object {
          "borderRadius": 35.5,
          "elevation": 15,
          "overflow": "hidden",
          "width": 531.5,
        }
      }
    />
  </View>
</View>
`;
